dataprep-webapp/src/app/components/datagrid/header/_datagrid-header.scss
/*  ============================================================================

  Copyright (C) 2006-2016 Talend Inc. - www.talend.com

  This source code is available under agreement available at
  https://github.com/Talend/data-prep/blob/master/LICENSE

  You should have received a copy of the agreement
  along with this program; if not, write to Talend SA
  9 rue Pages 92150 Suresnes, France

  ============================================================================*/

.grid-header {
	$datagrid-header: #266092;
	$datagrid-header-bkg: $dark-gray;
	$datagrid-header-bkg-active: darken($datagrid-header-bkg, 10%);

	$datagrid-headercell-font-size: .95em;

	background-color: $datagrid-header-bkg;
	border: 1px solid transparent; /*rgb(221, 221, 221);*/
	color: $white;
	text-transform: uppercase;
	font-family: $monospace;
	font-weight: 700;
	font-size: $datagrid-headercell-font-size;
	cursor: default;
	padding: 5px 5px 0;

	&:hover {
		background-color: $datagrid-header-bkg-active;
		border: 1px solid gray;
		cursor: default;
	}

	&.newColumn {
		background-color: rgba(193, 217, 6, 0.5);
	}

	&.updatedColumn {
		background-color: rgba(79, 193, 222, 0.5);
	}

	&.deletedColumn {
		background-color: rgba(255, 0, 0, 0.5);
		text-decoration: line-through;
	}

	.grid-header-type {
		@include ellipsis();
		height: 100%;
		text-transform: lowercase;
		font-size: 0.75em;
		font-weight: 300;
		text-align: right;
		display: block;
	}

	.grid-header-menu {
		@include menu-list;
		box-shadow: none;
		font-family: $base-font-family;
		padding: 0;
		li {
			height: 20px;
		}
	}

	.grid-header-title-input {
		color: #555964;
		display: table-cell;
		margin-bottom: 0;
		padding: 0 0 0 0.5em;
	}

	.talend-dropdown-div {
		width: 20px;
		float: right;

		.sc-dropdown-trigger {
			padding: 0;
		}
	}

	.talend-dropdown-text-div {
		overflow: hidden;
		max-width: 90%;
		height: 23px;
		.grid-header-title {
			width: 100%;
			height: 100%
		}
	}

}

